add: refresh token

--- a/Server/ClothingStore/appsettings.json
+++ b/Server/ClothingStore/appsettings.json
@@ -7,6 +7,7 @@
     }
   },
   "TokenKey": "J3l1FJFQT5PElFvl2ltk55rks2lslt^a4&lq6nas84ej&fCUVCtPCCijevl2ltk55rks2lslt^a4&lq6nas84ej&RzJ17nai4f1lfk6y4av6&lr@2ej&4&yyb%vk8+",
+  "RefreshKey": "7jbk5a6b5&ni8vos6s(s49547%%751hlw$k7v1b15twriaa(i57562bs85k$a+soy1h4*w14jn9j^675di4q54j12fi2uls%h45$ie2l4)&k13say2)4b7r85on$@e5455se6$vt8r$s)ao)s6ut2d@4",
   "ConnectionStrings": {
     "ClothingDatabase": "Data Source=DROM\\SQLEXPRESS;Initial Catalog=ClothingStore;Integrated Security=True;User Id=sa;Password=1;"
   },
