--- a/Server/ClothingStore/ClothingStore.csproj
+++ b/Server/ClothingStore/ClothingStore.csproj
@@ -30,6 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Migrations\" />
     <Folder Include="wwwroot\Uploads\Images\" />
   </ItemGroup>
 
